@@ -2,6 +2,7 @@
 	* [Engine] Renderer dynamic module should have dot (.) before arch
 	* [Engine] Early out of idCmdSystemLocal::CompleteArgument and idCmdSystemLocal::SetCommandCompletionFunc
 	* [Engine] Fixed few memory leaks
+	* [Engine] Reworked console key detection to use the sdl scancode instead of the keycode
 
 2021-06-13 Dusan Jocic <dusanjocic@msn.com>
 	* [RenderSystem] Fixed blended of texture detail
